--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 
 :root{
         --sucess-color: #2ecc71;
@@ -8,12 +8,12 @@
         box-sizing: border-box;
 }
 body{
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Press Start 2P', sans-serif;
         font-size: 16px;
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgb(248, 248, 248);
+        background-color: rgba(143, 71, 71, 0.774);
         min-height: 100vh;
 }
 
@@ -40,24 +40,26 @@ form{
 .form-control label{
         display: block;
         margin-bottom: 0.5rem;
+        
 }
 
 .form-control input{
         font-size: 1rem;
+        border: 5px solid black;
         width: 100%;
         padding: 0.5rem;
         
 }
 .form-control input:focus{
         outline: 0;
-        border-color: #777;
+        border-color: rgba(67, 148, 42, 0.452);
 }
 .form-control small{
         display: block;
-        font-size: 0.75rem;
+        font-size: 0.6rem;
         color: var(--error-color);
         position: absolute;
-      
+        padding: 0.2rem;
         visibility: hidden;
         
 }
@@ -66,10 +68,10 @@ form{
         visibility: visible;
 }
 .form-control.error input{
-        border: 1px solid var(--error-color) ;
+        border: 5px solid var(--error-color) ;
 }
 .form-control.success input{
-        border: 1px solid var(--sucess-color);
+        border: 5px solid var(--sucess-color);
 }
 form button{
         width: 100%;
@@ -83,6 +85,7 @@ form button{
         margin-top: 2rem;
         cursor: pointer;
         padding: 1rem;
+        font-family: 'Press Start 2P', sans-serif;
 }
 
 
